; ModuleID = '/home/carl/AnghaBench/redis/tests/modules/extr_propagate.c_timerHandler.c'
source_filename = "/home/carl/AnghaBench/redis/tests/modules/extr_propagate.c_timerHandler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@timerHandler.times = internal global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"INCR\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"c\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"timer\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @timerHandler(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = call i32 @REDISMODULE_NOT_USED(i8* %5)
  %7 = load i8*, i8** %4, align 8
  %8 = call i32 @REDISMODULE_NOT_USED(i8* %7)
  %9 = load i8*, i8** %3, align 8
  %10 = call i32 @RedisModule_Replicate(i8* %9, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0))
  %11 = load i32, i32* @timerHandler.times, align 4
  %12 = add nsw i32 %11, 1
  store i32 %12, i32* @timerHandler.times, align 4
  %13 = load i32, i32* @timerHandler.times, align 4
  %14 = icmp slt i32 %13, 10
  br i1 %14, label %15, label %18

15:                                               ; preds = %2
  %16 = load i8*, i8** %3, align 8
  %17 = call i32 @RedisModule_CreateTimer(i8* %16, i32 100, void (i8*, i8*)* @timerHandler, i32* null)
  br label %19

18:                                               ; preds = %2
  store i32 0, i32* @timerHandler.times, align 4
  br label %19

19:                                               ; preds = %18, %15
  ret void
}

declare dso_local i32 @REDISMODULE_NOT_USED(i8*) #1

declare dso_local i32 @RedisModule_Replicate(i8*, i8*, i8*, i8*) #1

declare dso_local i32 @RedisModule_CreateTimer(i8*, i32, void (i8*, i8*)*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
